Add mock for os.path.exists. This is necessary for the class WMLightAuthInterface to work correctly. In this case, you will not need to specify the paths to the key and certificate

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
-
 [tox]
-envlist=py27,py34,py35
+envlist=py27,py35,py36,py37,py38
 
 [testenv]
-deps=pytest
-passenv=*
-commands=py.test tests.py
+deps =
+    pytest
+    mock
+setenv =
+    WM_CERTPATH = /home/user/path_to_cert
+    WM_KEYPATH = /home/user/path_to_key
+commands = pytest
